Add buttons to contact section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,32 @@
 
                 <div class="row content-row">
 
+                    <div class="row">
+						<div class = "col-m-2 col-lg-2">
+							<a href="https://github.com/vvijayan-dev" target="_blank" type="button" class="btn btn-raised btn-unique"><i class="fa fa-github left"></i> Github</a>
+						</div>
+
+						<div class = "col-m-2 col-lg-2">
+							<a href="https://www.facebook.com/vishnu.vijayan.106" target="_blank" type="button" class="btn btn-raised btn-fb"><i class="fa fa-facebook left"></i> Facebook</a>
+						</div>
+
+						<div class = "col-m-2 col-lg-2">
+							<a href = "https://www.youtube.com/channel/UCd61HBrtQBlCRXahkcJMykw" target="_blank" type="button" class="btn btn-raised btn-danger"><i class="fa fa-youtube left"></i> Youtube</a>
+						</div>
+
+						<div class = "col-m-2 col-lg-2">
+							<a href="mailto:slpxatwon@gmail.com?Subject=Hi%20Vishnu" target="_top" type="button" class="btn btn-raised btn-amber"><i class="fa fa-envelope left"></i> Email</a>
+						</div>
+
+						<div class = "col-m-2 col-lg-2">
+							<a href="https://www.linkedin.com/in/vishnu-vijayan-316625133" target="_blank" type="button" class="btn btn-raised btn-primary"><i class="fa fa-linkedin left"></i> Linkedin</a>
+						</div>
+
+						<div class = "col-m-2 col-lg-2">
+							<a href="/resume-min.pdf" target="_blank" type="button" class="btn btn-raised btn-info"><i class="fa fa-envelope left"></i> Resume</a>
+						</div>
+					</div>
+
                     <div id="about-content" class="col-sm-12 col-lg-10 well well-rounded text-center">
                         <h1 class="name">Vishnu Vijayan</h1>
                         <h1>Web Developer | Software Engineer | Music Producer</h1>
@@ -173,7 +199,7 @@
 
                     <div class="row text-center">
                         <div class="col-sm-12 col-md-6">
-                            <h1>Stuff</h1>
+                            <h1>Come, let's build the future together</h1>
                         </div>
 
                         <div class="col-sm-12 col-md-6">
@@ -224,6 +250,8 @@
                         </div>
                     </div>
 
+
+
                 </div>
             </div>
         </div>
@@ -267,6 +295,7 @@
                 $('#about-content').removeClass('well').removeClass('well-rounded');
                 $('#skills-container').removeClass('well').removeClass('well-rounded');
                 $('#section2-bg').closest('div').remove();
+                $('.text-left').removeClass('.text-left').addClass('text-right');
             }
 
             var started = false;
