Change contact page styling for mobile

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="row content-row">
 
                     <div class="row text-center">
-                        <div class="col-sm-12 col-lg-6" style="margin-bottom: 15px;">
+                        <div class="col-sm-12 col-lg-6 visible-lg" style="margin-bottom: 15px;">
                             <h1 id="contact-header">Come, let's build the future together</h1>
                         </div>
 
