--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                  <label for="message-text" class="col-md-2 control-label">Textarea</label>
+                                  <label for="message-text" class="col-md-2 control-label">Message</label>
 
                                   <div class="col-md-10">
                                     <textarea class="form-control" rows="3" id="message-text" placeholder="Your Message"></textarea>
