Add scroll buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <div class="gradient-grey"></div>
     </div>
 
-    </div>
+    <button id="button-up" class="btn btn-default btn-raised btn-fab"><i class="material-icons">keyboard_arrow_up</i></button>
+    <button id="button-down" class="btn btn-default btn-raised btn-fab"><i class="material-icons">keyboard_arrow_down</i></button>
 
     <div id="fullpage">
 
@@ -65,6 +66,7 @@
                         <div id="about-buttons" class="row" style="padding-top: 10px;">
                             <a class="btn btn-raised btn-primary" style="margin-right: 20px;">Resume <i class="fa fa-file white" aria-hidden="true"></i></a>
                             <a class="btn btn-raised btn-primary">GitHub <i class="fa fa-github white" aria-hidden="true"></i></a>
+                            <span class="mob-down-arrow"><i class="material-icons white">keyboard_arrow_down</i></span>
                         </div>
 
                     </div>
