Change about section color to cyan

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="row content-row">
 
-                    <div id="about-content" class="col-sm-12 col-lg-10 well well-rounded well-teal text-center">
+                    <div id="about-content" class="col-sm-12 col-lg-10 well well-rounded well-cyan text-center">
                         <h1 class="name">Vishnu Vijayan</h1>
                         <h1 id="occ">Web Developer | Software Engineer | Music Producer</h1>
                         <p class="about-me">Hello! My name is Vishnu Vijayan and I'm currently a sophomore at Purdue University. I love
@@ -64,8 +64,8 @@
                         </p>
 
                         <div id="about-buttons" class="row" style="padding-top: 10px;">
-                            <a class="btn btn-raised btn-primary" style="margin-right: 20px;">Resume <i class="fa fa-file white" aria-hidden="true"></i></a>
-                            <a class="btn btn-raised btn-primary">GitHub <i class="fa fa-github white" aria-hidden="true"></i></a>
+                            <a class="btn btn-raised btn-info" style="margin-right: 20px;">Resume <i class="fa fa-file white" aria-hidden="true"></i></a>
+                            <a class="btn btn-raised btn-info">GitHub <i class="fa fa-github white" aria-hidden="true"></i></a>
                             <span class="mob-down-arrow"><i class="material-icons white">keyboard_arrow_down</i></span>
                         </div>
 
