Change projects page background to teal

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <div class="col-sm-9 text-center">
                                     <h2 class="skill-heading">Front-end web development</h2>
                                     <h2 class="advanced">Advanced</h2>
-                                    <h2 class="tech">HTML, CSS, JavaScript, Bootstrap</h2>
+                                    <h2 class="tech">HTML, CSS, JavaScript, Bootstrap, Angular</h2>
                                 </div>
                             </div>
 
